--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,13 +4,13 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!--<ion-header>-->
 
-  <ion-navbar>
-    <ion-title>Connectez-vous</ion-title>
-  </ion-navbar>
+  <!--<ion-navbar>-->
+    <!--<ion-title>Connectez-vous</ion-title>-->
+  <!--</ion-navbar>-->
 
-</ion-header>
+<!--</ion-header>-->
 
 
 <ion-content padding class="login no-scroll" style="max-height: 100%">
@@ -23,6 +23,15 @@
       </ion-col>
       <ion-col col-4></ion-col>
     </ion-row>
+
+    <ion-row>
+      <ion-col col-8 offset-2="">
+        <div style="text-align: center; font-size: large">
+          CONNEXION
+        </div>
+      </ion-col>
+    </ion-row>
+
   </ion-grid>
 
   <ion-list class="list-form">
