--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,18 +5,16 @@
 </ion-header>
 
 <ion-content padding>
+
+
+
+
+
   <ion-list>
-    <template *ngIf="manager_farms.length == 0;else display_farm">
-      <ion-item>
-        No farm was affected. Please contact your administrator
-      </ion-item>
-    </template>
-    <ion-item #display_farm  *ngFor="let farm of manager_farms; index as i" (click)="loadFarm(i)">
-      <ion-thumbnail item-start>
-        <img src="assets/imgs/farm.png">
-      </ion-thumbnail>
+    <button ion-item *ngFor="let farm of manager_farms; index as i" (click)="loadFarm(i)">
+      <text-avatar [text]="farm.name"[color]="color" item-left></text-avatar>
       <h2>{{farm.name}}</h2>
       <p>{{farm.description}}</p>
-    </ion-item>
+    </button>
   </ion-list>
 </ion-content>
